--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Vigauto garage ">
-    <meta name="keywords" content="Garage, Mechanic, Repair car, Repair shop">
+    <meta name="description" content="TRIANGLE">
+    <meta name="keywords" content="Project TRIANGLE">
     <meta name="author" content="Vladimir Ursu">
     <!-- Bootstrap 4 css -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
